--- a/frontend/home.html
+++ b/frontend/home.html
@@ -47,6 +47,36 @@
       </div>
     </nav>
 
+
+
+    <div class="card-group">
+        <div class="card">
+          <img src="./photos/download.jpeg" width= 200*200 class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">TREE PLANTATION</h5>
+            <p class="card-text">TREE PLANTATION program in the shankamul park.</p>
+            <a href="./joinus.html" class="btn btn-primary">JOIN US</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./photos/272135566_3206947499589711_8104286597397643016_n1642680050_1024.jpg"  width= 200*200 class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">SANITAION PROGRAM</h5>
+            <p class="card-text">Sanitation program at koteshowr</p>
+            <a href="./joinus.html" class="btn btn-primary">JOIN US</a>
+           
+          </div>
+        </div>
+        <div class="card">
+          <img src="./photos/aidingAnimals.jpeg" width= 200*200 class="card-img-top" alt="Aiding animals">
+          <div class="card-body">
+            <h5 class="card-title">AIDING STREET ANIMALS</h5>
+            <p class="card-text">Aiding and vactinating the street animals</p>
+            <a href="./joinus.html" class="btn btn-primary">JOIN US</a>
+          </div>
+        </div>
+      </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
