--- a/frontend/home.html
+++ b/frontend/home.html
@@ -61,7 +61,7 @@
         <img src="./photos/272135566_3206947499589711_8104286597397643016_n1642680050_1024.jpg"  width= 200*200 class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">SANITAION PROGRAM</h5>
-          <p class="card-text">Sanitation program at koteshowr</p>
+          <p class="card-text">Sanitation Program At koteshowr</p>
           <a href="./joinus.html" class="btn btn-primary">JOIN US</a>
          
         </div>
