--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="slider-img"><img src="assets/images/slider/slider-1.jpg" alt=""></div>
+                <div class="slider-img"><img src="assets/images/slider/afforestation (1).jpg" width="500 * 500 " alt=""></div>
                 <div class="container" >
                     <div class="row">
                         <a href="about_us.html">
@@ -150,12 +150,10 @@
         						<img src="assets/images/events/image_02.jpg" alt="">
         					</figure>
         					<div class="blog-detail">
-        						<small>August 10 2018</small>
-								<h4></h4>
-								<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam justo neque, aliquet sit amet elementum vel, vehicula eget eros. Vivamus arcu metus, mattis sed sagittis at, sagittis quis neque. Praesent.</p>
-								<div class="link">
-									<a href="">Read more </a><i class="fas fa-long-arrow-alt-right"></i>
-								</div>
+        						<small>october 5 2020</small>
+								<h4>FREE HEALTH CHECKUP CHAMPAIGN</h4>
+								<p>Providing free health checkup champaign to the rural areas.</p>
+
         					</div>
         					
         					
