--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,8 +1,10 @@
 <!-- register.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
     <link rel="stylesheet" href="register.css">
 </head>
@@ -14,6 +16,7 @@
             <input type="text" id="firstName" placeholder="First Name" required>
             <input type="text" id="lastName" placeholder="Last Name" required>
             <input type="email" id="email" placeholder="Email" required>
+            <input type="tel" id="contactNumber" placeholder="Contact Number" required>
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
             <button type="button" onclick="submitForm()">Submit</button>
