page added and other stuff

--- a/frontend/earthquake.html
+++ b/frontend/earthquake.html
@@ -79,26 +79,28 @@
 
         <div class="row natur-row no-margin w-100">
             <div class="text-part col-md-6">
-                <h2>AFFORESTATION PROGRAM</h2>
+                <h2>EARTHQUAKKE VICTIMS AID</h2>
                 <P>
-                    Afforestation, in its most basic definition, is the planting of trees in a long-time (at least 50 years) unforested region. Land that has been left fallow because of soil quality depletion or overgrazing is often the target of afforestation measures. Many areas could benefit from these initiatives, such as dry, deserted areas, degraded grazing pastures, idle farmlands, and decommissioned industrial zones.
-                    Afforestation is also necessary for carbon dioxide removal since trees collect CO2 from the air throughout their growth, and forests may store this carbon over decades. Besides reducing atmospheric carbon dioxide levels, this method provides other context-dependent benefits for ecosystems and local communities.
+                    A documentary that includes statements from a politician, two journalists and an activist highlights criticism of Turkish President Recep Tayyip Erdoğan and his ruling Justice and Development Party (AKP) for their poor job in responding to powerful earthquakes in Turkey last month. A 7.8-magnitude earthquake struck Turkey’s south on Feb. 6, which was followed by a number of aftershocks including a 7.5-magnitude temblor that jolted the region, killing more than 44,000 people in Turkey, according to the latest official figures. Following the earthquakes, Erdoğan and his government were accused of poor performance in coordinating search and rescue efforts, mainly failing to mobilize enough people and a lack of coordination among the teams, which resulted in civilians trying to pull their loved ones from under the rubble themselves.
                 </P>
             </div>
 
             <div class="image-part col-md-6">
                 <div class="about-quick-box row">
-                    <img src="assets/images/slider/afforestation (1).jpg" alt="">
+                    <img src="assets/images/slider/slider-2.jpg" alt="">
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+
+
 <div class="nav-box row clearfix">
-    <div class="donate-link col-md-3"><a href="" class="btn btn-primary "><span class="btn-title">JOIN US</span></a></div>
-          <div class="donate-link col-md-3"><a href="about_us.html" class="btn btn-primary "><span class="btn-title">Donate Now</span></a></div>
-    </div>
+<div class="donate-link col-md-3"><a href="" class="btn btn-primary "><span class="btn-title">JOIN US</span></a></div>
+      <div class="donate-link col-md-3"><a href="about_us.html" class="btn btn-primary "><span class="btn-title">Donate Now</span></a></div>
+</div>
+
 
 
 
