changes about_us , afforestation  ,contact_us and earthquake and index changes

--- a/frontend/afforestation.html
+++ b/frontend/afforestation.html
@@ -51,7 +51,7 @@
 
                             <ul class="navbad">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home
+                                    <a class="nav-link" href="index1.html">Home
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -97,7 +97,7 @@
 
 <div class="nav-box row clearfix">
     <div class="donate-link col-md-3"><a href="" class="btn btn-primary "><span class="btn-title">JOIN US</span></a></div>
-          <div class="donate-link col-md-3"><a href="about_us.html" class="btn btn-primary "><span class="btn-title">Donate Now</span></a></div>
+          <div class="donate-link col-md-3"><a href="contact_us.html" class="btn btn-primary "><span class="btn-title">Donate Now</span></a></div>
     </div>
 
 
