--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row nav-row">
                 <div class="col-lg-3 col-md-12 logo">
-                    <a href="index.html">
+                    <a href="index1.html">
 
                         <a data-toggle="collapse" data-target="#menu" href="#menu"><i class="fas d-block d-lg-none  small-menu fa-bars"></i></a>
                     </a>
@@ -51,7 +51,7 @@
 
                             <ul class="navbad">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home
+                                    <a class="nav-link" href="index1.html">Home
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -83,13 +83,15 @@
                     <div class="slider-img"><img src="assets/images/slider/slider-3.jpg" alt=""></div>
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 col-xs-12">
+                            <a href="earthquake.html">
+                                <div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 col-xs-12">
                                 <div class="animated bounceInDown slider-captions">
                                     <h1 class="slider-title">EARTHQUAKE VICTIMS</h1>
                                     <p class="slider-text hidden-xs">Aiding people affected by EARTHQUAKE</p>
                                     
                                 </div>
-                            </div>
+                            </div></a>
+                            
                         </div>
                     </div>
                 </div>
