--- a/frontend/earthquake.html
+++ b/frontend/earthquake.html
@@ -98,7 +98,7 @@
 
 <div class="nav-box row clearfix">
 <div class="donate-link col-md-3"><a href="" class="btn btn-primary "><span class="btn-title">JOIN US</span></a></div>
-      <div class="donate-link col-md-3"><a href="about_us.html" class="btn btn-primary "><span class="btn-title">Donate Now</span></a></div>
+      <div class="donate-link col-md-3"><a href="contact_us.html" class="btn btn-primary "><span class="btn-title">Donate Now</span></a></div>
 </div>
 
 
