--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -54,6 +54,10 @@
                                     <a class="nav-link" href="index1.html">Home
                                     </a>
                                 </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="index1.html">Add events
+                                    </a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about_us.html">About Us</a>
                                 </li>
