events hyperlink added to index and form added

--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -55,7 +55,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index1.html">Add events
+                                    <a class="nav-link" href="addEvents.html">Add events
                                     </a>
                                 </li>
                                 <li class="nav-item">
