href added to afforestation joined button

--- a/frontend/afforestation.html
+++ b/frontend/afforestation.html
@@ -96,7 +96,7 @@
 </div>
 
 <div class="nav-box row clearfix">
-    <div class="donate-link col-md-3"><a href="" class="btn btn-primary "><span class="btn-title">JOIN US</span></a></div>
+    <div class="donate-link col-md-3"><a href="joinUs.html" class="btn btn-primary "><span class="btn-title">JOIN US</span></a></div>
           <div class="donate-link col-md-3"><a href="contact_us.html" class="btn btn-primary "><span class="btn-title">Donate Now</span></a></div>
     </div>
 
