--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -59,6 +59,9 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="index.html">LOGIN</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="about_us.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
@@ -133,7 +136,7 @@
     <section class="our-blog">
          	<div class="container">
          		<div class="row session-title">
-        			<h2>OUR PROGRESS</h2>
+        			<h2>NEW EVENTS</h2>
         		</div>
         		<div class="blog-row row">
         			<div class="col-md-4 col-sm-6">
