created folder and sorted

--- a/frontend/loginForm/html/forget.html
+++ b/frontend/loginForm/html/forget.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password</title>
-    <link rel="stylesheet" href="forget.css">
+    <link rel="stylesheet" href="../css/forget.css">
 </head>
 <body>
     <div class="forgot-password-container">
@@ -19,6 +19,6 @@
         <div id="errorMessage" class="hidden">Invalid email format. Please try again.</div>
     </div>
 
-    <script src="forget.js"></script>
+    <script src="../js/forget.js"></script>
 </body>
 </html>
