--- a/frontend/loginForm/html/index.html
+++ b/frontend/loginForm/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Your Login Page Title</title>
-    <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" href="../css/design.css">
     <style>
         /* Add the following styles to center align the Register button and Forgot Password link */
         .login-container {
@@ -33,10 +33,10 @@
             <button type="submit">Login</button>
         </form>
         <div class="form-group">
-            <a href="register.html" class="register button">Register</a>
-            <a href="forget.html" class="forgot-password">Forgot Password?</a>
+            <a href="../html/register.html" class="register button">Register</a>
+            <a href="../html/forget.html" class="forgot-password">Forgot Password?</a>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
