--- a/frontend/loginForm/html/register.html
+++ b/frontend/loginForm/html/register.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="../css/register.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <button type="button" onclick="submitForm()">Submit</button>
         </form>
     </div>
-    <script src="register.js"></script>
+    <script src="../js/register.js"></script>
 </body>
 
 </html>
