--- a/frontend/homePage/index1.html
+++ b/frontend/homePage/index1.html
@@ -66,7 +66,7 @@
                                     <a class="nav-link" href="contact_us.html">Contact US</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">LOGIN</a>
+                                    <a class="nav-link" href="../loginForm/html/index.html">LOGIN</a>
                                 </li>
 
 
