--- a/frontend/loginForm/html/index.html
+++ b/frontend/loginForm/html/index.html
@@ -30,7 +30,7 @@
         <form>
             <input type="text" id="username" placeholder="Username or Email">
             <input type="password" id="password" placeholder="Password">
-            <button type="submit">Login</button>
+            <a href="../../homePage/index1.html"><button type="submit">Login</button></a>
         </form>
         <div class="form-group">
             <a href="../html/register.html" class="register button">Register</a>
